syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/protos/data/search_result";
option java_package = "ru.yandex.alice.protos.data.search_result";
option java_outer_classname = "SearchResult";

import "alice/protos/data/video/video.proto";
import "google/protobuf/struct.proto";

import "mapreduce/yt/interface/protos/extension.proto";

message TGetVideoGalleriesRequest {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string CategoryId = 1 [json_name = "category_id", (NYT.column_name) = "category_id"];
}

message TSearchResultItem {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    enum EItemType {
         unknown = 0;
         entity = 1;
         search = 2;
         actor = 3;
         association = 4;
         collection = 5;
    }

    bool Visible = 1 [json_name = "visible", (NYT.column_name) = "visible"];
    int32 Number = 2 [json_name = "number", (NYT.column_name) = "number"];
    EItemType ContentType = 3 [json_name = "content_type", (NYT.column_name) = "content_type"];

    oneof Item {
        TVideoItem VideoItem = 21 [json_name = "video_item", (NYT.column_name) = "video_item"];
        TPersonItem PersonItem = 22 [json_name = "person_item", (NYT.column_name) = "person_item"];
        TCollectionItem CollectionItem = 23 [json_name = "collection_item", (NYT.column_name) = "collection_item"];
        TOttVideoItem OttVideoItem = 24 [json_name = "ott_video_item", (NYT.column_name) = "ott_video_item"];
        TWebVideoItem SearchVideoItem = 25 [json_name = "search_video_item", (NYT.column_name) = "search_video_item"];
    }
}

message TSearchResultGallery {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Title = 1 [json_name = "title", (NYT.column_name) = "title" ];
    bool Visible = 2 [json_name = "visible", (NYT.column_name) = "visible"];
    repeated TSearchResultItem Items = 3 [json_name = "items", (NYT.column_name) = "items"];
    google.protobuf.Struct DivJson = 4 [json_name = "div_json", (NYT.column_name) = "div_json"];
}

message TSearchResultData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    repeated TSearchResultGallery Galleries = 1 [json_name = "galleries", (NYT.column_name) = "galleries"];
}
